Add some random ball spawning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 bevy = "0.6.1"
 bevy_rapier3d = "0.12.1"
+rand = { version = "0.8.5", features = ["small_rng"]}
 
 # Enable only a small amount of optimization in debug mode
 [profile.dev]
